# voice-agent

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt  voice-agent.code-workspace
docs/: project_summary.md
pseudocode/: admin_functionality.py  auth.py  conversation_management.py  ui_components.py  voice_processing.py
specs/: data_models.md  environment_variables.md  functional_requirements.md  system_components.md
src/: .coverage  __init__.py  app.py
src/admin/: __init__.py  models.py  service.py
src/auth/: __init__.py  api_key.py  jwt_auth.py  models.py  security.py  service.py  standalone_test.py  test_token_revocation_direct.py  token_revocation.py
src/config/: __init__.py  config_service.py  environment.py
src/conversation/: __init__.py  core.py  crud.py  models.py  realtime.py  search.py  search_api.py  security.py  service.py  turn.py
src/monitoring/: README.md  __init__.py  app_integration.py  dashboard.py  integration.py  security_monitoring.py
src/security/: __init__.py  api_key_manager.py  api_security.py  data_security.py  error_handling.py  field_encryption.py  input_validation.py  livekit_security.py  rate_limiter.py  secrets_manager.py  secure_file_handler.py  token_validation.py
src/storage/: __init__.py  service.py
src/tests/: README.md  __init__.py  conftest.py  pytest.ini
src/ui/: __init__.py  app.py  theme.py  voice_components.py
src/utils/: __init__.py  mock_helpers.py  supabase_client.py
src/voice/: __init__.py  audio_capture.py  audio_playback.py  audio_processing.py  (+7 more)
(+34 files in other folders)
